@@ -21,19 +21,18 @@ import org.cyk.system.file.server.persistence.api.FilePersistence;
 import org.cyk.system.file.server.persistence.entities.File;
 import org.cyk.system.file.server.persistence.entities.FileBytes;
 import org.cyk.system.file.server.persistence.entities.FileText;
+import org.cyk.utility.__kernel__.collection.CollectionHelper;
+import org.cyk.utility.__kernel__.file.FileHelper;
+import org.cyk.utility.__kernel__.file.Files;
+import org.cyk.utility.__kernel__.number.NumberHelper;
 import org.cyk.utility.__kernel__.properties.Properties;
-import org.cyk.utility.collection.CollectionHelperImpl;
-import org.cyk.utility.file.FileHelperImpl;
-import org.cyk.utility.file.Files;
-import org.cyk.utility.file.Paths;
+import org.cyk.utility.__kernel__.string.RegularExpressionHelper;
+import org.cyk.utility.__kernel__.string.StringHelper;
+import org.cyk.utility.__kernel__.string.Strings;
 import org.cyk.utility.number.Intervals;
-import org.cyk.utility.number.NumberHelperImpl;
-import org.cyk.utility.regularexpression.RegularExpressionHelperImpl;
 import org.cyk.utility.server.business.AbstractBusinessEntityImpl;
 import org.cyk.utility.server.business.BusinessFunctionCreator;
 import org.cyk.utility.server.business.BusinessFunctionRemover;
-import org.cyk.utility.string.StringHelperImpl;
-import org.cyk.utility.string.Strings;
 
 @ApplicationScoped
 public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersistence> implements FileBusiness,Serializable {
@@ -48,14 +47,14 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 			@Override
 			public void run() {
 				byte[] bytes = file.getBytes();
-				if(StringHelperImpl.__isBlank__(file.getSha1())) {
+				if(StringHelper.isBlank(file.getSha1())) {
 					if(bytes==null) {
 						//TODO get a way to compute sha1 : from given uniform resource locator
 					}else
 						file.setSha1(new String(new DigestUtils(MessageDigestAlgorithms.SHA_1).digestAsHex(bytes)));
 				}
 				/*
-				if(StringHelperImpl.__isNotBlank__(file.getSha1())) {
+				if(StringHelper.isNotBlank(file.getSha1())) {
 					File current = __inject__(FilePersistence.class).readBySha1(file.getSha1());
 					if(current!=null)
 						__inject__(ThrowableHelper.class).throwRuntimeException("File content already exist");
@@ -64,26 +63,26 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 				String nameAndExtension = file.getNameAndExtension();
 				String extension = file.getExtension();
 								
-				if(StringHelperImpl.__isBlank__(file.getName())) {
-					if(StringHelperImpl.__isNotBlank__(nameAndExtension))
-						file.setName(FileHelperImpl.__getName__(nameAndExtension));
+				if(StringHelper.isBlank(file.getName())) {
+					if(StringHelper.isNotBlank(nameAndExtension))
+						file.setName(FileHelper.getName(nameAndExtension));
 				}
 				
-				if(StringHelperImpl.__isBlank__(extension)) {
-					if(StringHelperImpl.__isNotBlank__(nameAndExtension))
-						file.setExtension(FileHelperImpl.__getExtension__(nameAndExtension));
+				if(StringHelper.isBlank(extension)) {
+					if(StringHelper.isNotBlank(nameAndExtension))
+						file.setExtension(FileHelper.getExtension(nameAndExtension));
 				}
 				
-				if(StringHelperImpl.__isBlank__(file.getMimeType())) {
-					if(StringHelperImpl.__isNotBlank__(extension))
-						file.setMimeType(FileHelperImpl.__getMimeTypeByExtension__(extension));
-					else if(StringHelperImpl.__isNotBlank__(nameAndExtension))
-						file.setMimeType(FileHelperImpl.__getMimeTypeByNameAndExtension__(nameAndExtension));
+				if(StringHelper.isBlank(file.getMimeType())) {
+					if(StringHelper.isNotBlank(extension))
+						file.setMimeType(FileHelper.getMimeTypeByExtension(extension));
+					else if(StringHelper.isNotBlank(nameAndExtension))
+						file.setMimeType(FileHelper.getMimeTypeByNameAndExtension(nameAndExtension));
 				}
 				
 				if(file.getSize() == null) {
 					if(bytes!=null)
-						file.setSize(new Long(bytes.length));
+						file.setSize(Long.valueOf(bytes.length));
 				}
 				
 			}
@@ -92,7 +91,7 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 		function.addTryEndRunnables(new Runnable() {
 			@Override
 			public void run() {
-				if(StringHelperImpl.__isBlank__(file.getUniformResourceLocator())) {
+				if(StringHelper.isBlank(file.getUniformResourceLocator())) {
 					if(file.getBytes()!=null) {
 						if(Boolean.TRUE.equals(file.getIsBytesAccessibleFromUniformResourceLocator())) {
 							try {
@@ -110,7 +109,7 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 				}else {
 					
 				}
-				if(StringHelperImpl.__isNotBlank__(file.getText()))
+				if(StringHelper.isNotBlank(file.getText()))
 					__inject__(FileTextBusiness.class).create(new FileText().setFile(file).setText(file.getText()));
 			}
 		});
@@ -146,23 +145,23 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 		if(count!=null && count < batchSize)
 			batchSize = count;	
 		
-		Paths paths = FileHelperImpl.__getPaths__(directories, RegularExpressionHelperImpl.__formatFileNameHavingExtensions__(extensions), Boolean.FALSE, Boolean.TRUE, null);
-		if(CollectionHelperImpl.__isNotEmpty__(paths)) {
-			System.out.println("Number of files paths found : "+paths.getSize());
-			paths.removeByUniformResourceIdentifiers(__persistence__.readUniformResourceLocators(null));
-			System.out.println("Number of files paths to process : "+paths.getSize());
-			Files files = FileHelperImpl.__get__(paths, null);
-			if(CollectionHelperImpl.__isNotEmpty__(files)) {
+		Collection<Path> paths = FileHelper.getPaths(directories, RegularExpressionHelper.formatFileNameHavingExtensions(extensions), Boolean.FALSE, Boolean.TRUE, null);
+		if(CollectionHelper.isNotEmpty(paths)) {
+			System.out.println("Number of files paths found : "+paths.size());
+			FileHelper.removePathsByUniformResourceIdentifiers(paths, __persistence__.readUniformResourceLocators(null));
+			System.out.println("Number of files paths to process : "+paths.size());
+			Files files = FileHelper.get(paths, null);
+			if(CollectionHelper.isNotEmpty(files)) {
 				System.out.println("Number of files read : "+files.getSize());
 				System.out.println("Computing checksum...");
-				FileHelperImpl.__computeChecksum__(files);
+				FileHelper.computeChecksum(files);
 				System.out.println("Building persistables...");
 				Collection<File> persistable = null;
-				for(org.cyk.utility.file.File indexFile : files.get()) {
+				for(org.cyk.utility.__kernel__.file.File indexFile : files.get()) {
 					File persistenceEntity = null;
-					if(StringHelperImpl.__isNotBlank__(indexFile.getChecksum()) && StringHelperImpl.__isNotBlank__(indexFile.getMimeType()) 
-							&& NumberHelperImpl.__isGreaterThanZero__(indexFile.getSize())) {
-						//if(StringHelperImpl.__isNotBlank__(indexFile.getChecksum()))
+					if(StringHelper.isNotBlank(indexFile.getChecksum()) && StringHelper.isNotBlank(indexFile.getMimeType()) 
+							&& NumberHelper.isGreaterThanZero(indexFile.getSize())) {
+						//if(StringHelper.isNotBlank(indexFile.getChecksum()))
 						//	persistenceEntity = __persistence__.readBySha1(indexFile.getChecksum());
 						if(persistenceEntity == null) {
 							persistenceEntity = new File();
@@ -179,7 +178,7 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 						}
 					}
 				}
-				if(CollectionHelperImpl.__isNotEmpty__(persistable)) {
+				if(CollectionHelper.isNotEmpty(persistable)) {
 					System.out.println("Persisting "+persistable.size()+" by batch of "+batchSize+"...");
 					createByBatch(persistable, batchSize);
 					persistable.stream().map(x -> x.setBytes(null));
@@ -230,14 +229,14 @@ public class FileBusinessImpl extends AbstractBusinessEntityImpl<File, FilePersi
 			filesGetter.getFileSizeIntervals(Boolean.TRUE).add(sizes);
 			Files files = filesGetter.execute().getOutput();
 			
-			System.out.println("Number of file read : "+CollectionHelperImpl.__getSize__(files));
-			if(CollectionHelperImpl.__isNotEmpty__(files)) {
+			System.out.println("Number of file read : "+CollectionHelper.__getSize__(files));
+			if(CollectionHelper.isNotEmpty(files)) {
 				Collection<File> persistences = new ArrayList<>();
 				//System.out.println("FREE MEMORY 01 : "+Runtime.getRuntime().freeMemory());
 				for(org.cyk.utility.file.File indexFile : files.get()) {
 					File persistenceEntity = null;
-					if(StringHelperImpl.__isNotBlank__(indexFile.getMimeType()) && NumberHelperImpl.__isGreaterThanZero__(indexFile.getSize())) {
-						if(StringHelperImpl.__isNotBlank__(indexFile.getChecksum()))
+					if(StringHelper.isNotBlank(indexFile.getMimeType()) && NumberHelperImpl.__isGreaterThanZero__(indexFile.getSize())) {
+						if(StringHelper.isNotBlank(indexFile.getChecksum()))
 							persistenceEntity = __persistence__.readBySha1(indexFile.getChecksum());
 						if(persistenceEntity == null) {
 							persistenceEntity = __inject__(File.class);
