@@ -11,10 +11,10 @@ import org.cyk.system.file.server.persistence.entities.File;
 import org.cyk.system.file.server.persistence.entities.FileBytes;
 import org.cyk.system.file.server.persistence.entities.FileText;
 import org.cyk.utility.__kernel__.properties.Properties;
-import org.cyk.utility.collection.CollectionHelper;
+import org.cyk.utility.__kernel__.collection.CollectionHelper;
 import org.cyk.utility.server.persistence.query.filter.Filter;
 import org.cyk.utility.server.persistence.test.arquillian.AbstractPersistenceArquillianIntegrationTestWithDefaultDeployment;
-import org.cyk.utility.string.StringHelper;
+import org.cyk.utility.__kernel__.string.StringHelper;
 import org.junit.Test;
 
 public class PersistenceIntegrationTest extends AbstractPersistenceArquillianIntegrationTestWithDefaultDeployment {
@@ -24,7 +24,7 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 	public void file_create() throws Exception{
 		String identifier = __getRandomIdentifier__();
 		String text = "Hello";
-		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length))
+		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length))
 				.setSha1("sha1");
 		FileBytes fileBytes = new FileBytes().setFile(file).setBytes(text.getBytes());
 		FileText fileText = new FileText().setFile(file).setText(text);
@@ -35,7 +35,7 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 		__inject__(FileTextPersistence.class).create(fileText);
 		userTransaction.commit();
 		
-		assertRead(identifier,null, Boolean.TRUE,"file", "txt", "text/plain",  null,null,new Long(text.getBytes().length), null,null);
+		assertRead(identifier,null, Boolean.TRUE,"file", "txt", "text/plain",  null,null,Long.valueOf(text.getBytes().length), null,null);
 		
 		fileBytes = __inject__(FileBytesPersistence.class).readByFile(file);
 		assertThat(fileBytes).isNotNull();
@@ -45,7 +45,7 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 	public void file_read_nameAndExtension() throws Exception{
 		String identifier = __getRandomIdentifier__();
 		String text = "Hello";
-		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length))
+		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length))
 				.setSha1("sha1");
 		FileBytes fileBytes = new FileBytes().setFile(file).setBytes(text.getBytes());
 		FileText fileText = new FileText().setFile(file).setText(text);
@@ -56,14 +56,14 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 		__inject__(FileTextPersistence.class).create(fileText);
 		userTransaction.commit();
 		
-		assertRead(identifier,"nameAndExtension", Boolean.TRUE,"file", "txt", "text/plain",  "file.txt",null,new Long(text.getBytes().length), null,null);
+		assertRead(identifier,"nameAndExtension", Boolean.TRUE,"file", "txt", "text/plain",  "file.txt",null,Long.valueOf(text.getBytes().length), null,null);
 	}
 	
 	@Test
 	public void file_read_bytes() throws Exception{
 		String identifier = __getRandomIdentifier__();
 		String text = "Hello";
-		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length))
+		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length))
 				.setSha1("sha1");
 		FileBytes fileBytes = new FileBytes().setFile(file).setBytes(text.getBytes());
 		FileText fileText = new FileText().setFile(file).setText(text);
@@ -74,14 +74,14 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 		__inject__(FileTextPersistence.class).create(fileText);
 		userTransaction.commit();
 		
-		assertRead(identifier,"bytes", Boolean.TRUE,"file", "txt", "text/plain",null,null,new Long(text.getBytes().length), Boolean.TRUE,null);
+		assertRead(identifier,"bytes", Boolean.TRUE,"file", "txt", "text/plain",null,null,Long.valueOf(text.getBytes().length), Boolean.TRUE,null);
 	}
 	
 	@Test
 	public void file_read_text() throws Exception{
 		String identifier = __getRandomIdentifier__();
 		String text = "Hello";
-		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length))
+		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length))
 				.setSha1("sha1");
 		FileBytes fileBytes = new FileBytes().setFile(file).setBytes(text.getBytes());
 		FileText fileText = new FileText().setFile(file).setText(text);
@@ -92,14 +92,14 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 		__inject__(FileTextPersistence.class).create(fileText);
 		userTransaction.commit();
 		
-		assertRead(identifier,"text", Boolean.TRUE,"file", "txt", "text/plain",null,null,new Long(text.getBytes().length), null,"Hello");
+		assertRead(identifier,"text", Boolean.TRUE,"file", "txt", "text/plain",null,null,Long.valueOf(text.getBytes().length), null,"Hello");
 	}
 	
 	@Test
 	public void file_read_nameAndExtension_bytes_text() throws Exception{
 		String identifier = __getRandomIdentifier__();
 		String text = "Hello";
-		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length))
+		File file = new File().setIdentifier(identifier).setName("file").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length))
 				.setSha1("sha1");
 		FileBytes fileBytes = new FileBytes().setFile(file).setBytes(text.getBytes());
 		FileText fileText = new FileText().setFile(file).setText(text);
@@ -110,37 +110,37 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 		__inject__(FileTextPersistence.class).create(fileText);
 		userTransaction.commit();
 		
-		assertRead(identifier,"nameAndExtension,bytes,text", Boolean.TRUE,"file", "txt", "text/plain",  "file.txt",null,new Long(text.getBytes().length), Boolean.TRUE,"Hello");
+		assertRead(identifier,"nameAndExtension,bytes,text", Boolean.TRUE,"file", "txt", "text/plain",  "file.txt",null,Long.valueOf(text.getBytes().length), Boolean.TRUE,"Hello");
 	}
 	
 	@Test
 	public void read_name_alphabetic_order() throws Exception{
 		String text = "Hello";
 		userTransaction.begin();
-		__inject__(FilePersistence.class).createMany(__inject__(CollectionHelper.class).instanciate(
-				new File().setName("c").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("a").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("b").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("e").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("d").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
+		__inject__(FilePersistence.class).createMany(CollectionHelper.listOf(
+				new File().setName("c").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("a").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("b").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("e").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("d").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
 				));
 		userTransaction.commit();
 		
 		assertThat(__inject__(FilePersistence.class).read().stream().map(File::getName).collect(Collectors.toList())).containsExactly("a","b","c","d","e");
 		
 		userTransaction.begin();
-		__inject__(FilePersistence.class).createMany(__inject__(CollectionHelper.class).instanciate(
-				new File().setName("g").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("a1").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
-				,new File().setName("a").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
+		__inject__(FilePersistence.class).createMany(CollectionHelper.listOf(
+				new File().setName("g").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("a1").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
+				,new File().setName("a").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
 				));
 		userTransaction.commit();
 		
 		assertThat(__inject__(FilePersistence.class).read().stream().map(File::getName).collect(Collectors.toList())).containsExactly("a","a","a1","b","c","d","e","g");
 		
 		userTransaction.begin();
-		__inject__(FilePersistence.class).createMany(__inject__(CollectionHelper.class).instanciate(
-				new File().setName("f").setExtension("txt").setMimeType("text/plain").setSize(new Long(text.getBytes().length)).setSha1("sha1")
+		__inject__(FilePersistence.class).createMany(CollectionHelper.listOf(
+				new File().setName("f").setExtension("txt").setMimeType("text/plain").setSize(Long.valueOf(text.getBytes().length)).setSha1("sha1")
 				));
 		userTransaction.commit();
 		
@@ -209,7 +209,7 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 	/**/
 	
 	private void assertRead(String identifier,String fields,Boolean expectedIsNotNull,String expectedName,String expectedExtension,String expectedMimeType,String expectedNameAndExtension,String expectedURL,Long expectedSize,Boolean expectedBytesIsNotNull,String expectedText) {
-		File file = __inject__(FilePersistence.class).readBySystemIdentifier(identifier,__inject__(StringHelper.class).isBlank(fields) ? null : new Properties().setFields(fields));
+		File file = __inject__(FilePersistence.class).readBySystemIdentifier(identifier,StringHelper.isBlank(fields) ? null : new Properties().setFields(fields));
 		if(expectedIsNotNull != null && expectedIsNotNull) {
 			assertThat(file).as(String.format("file with identifier %s does not exist",identifier)).isNotNull();
 			assertThat(file.getExtension()).as("extension does not match").isEqualTo(expectedExtension);
@@ -227,13 +227,13 @@ public class PersistenceIntegrationTest extends AbstractPersistenceArquillianInt
 	
 	private void assertReadWhereNameContains(String string,Integer count) {
 		assertThat(__inject__(FilePersistence.class).readWhereNameContains(string)).as("number of file from collection where name contains <<"+string+">> is incorrect").hasSize(count);
-		assertThat(__inject__(FilePersistence.class).countWhereNameContains(string)).as("number of file from count where name contains <<"+string+">> is incorrect").isEqualTo(new Long(count));
+		assertThat(__inject__(FilePersistence.class).countWhereNameContains(string)).as("number of file from count where name contains <<"+string+">> is incorrect").isEqualTo(Long.valueOf(count));
 	}
 	
 	private void assertFilter_whereContains(String string,Integer count) {
 		Filter filter = __inject__(Filter.class).setValue(string);
 		assertThat(__inject__(FilePersistence.class).read(new Properties().setQueryFilters(filter))).as("global : number of file from collection where name or text contains <<"+string+">> is incorrect").hasSize(count);
-		assertThat(__inject__(FilePersistence.class).count(new Properties().setQueryFilters(filter))).as("global : number of file from count where name or text contains <<"+string+">> is incorrect").isEqualTo(new Long(count));
+		assertThat(__inject__(FilePersistence.class).count(new Properties().setQueryFilters(filter))).as("global : number of file from count where name or text contains <<"+string+">> is incorrect").isEqualTo(Long.valueOf(count));
 	}
 	
 }
